Assembly Naming Conventions

--- a/MMSBruteForceEmu/MMSBruteForceEmu.csproj
+++ b/MMSBruteForceEmu/MMSBruteForceEmu.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3F27CBF5-E397-4803-AFCA-A24A4A29DE05}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>BruteForceEmulator</RootNamespace>
-    <AssemblyName>BruteForceEmulator</AssemblyName>
+    <RootNamespace>MMSBruteForceEmu</RootNamespace>
+    <AssemblyName>MMSBruteForceEmu</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -69,6 +69,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
